src/css/technology-stack.css
  #technology h1 {
    margin-bottom: 2rem;
  }
  
  .tech__img {
    display: grid;
    grid-template-columns: repeat(3, 3fr);
    gap: 1rem;
    justify-items: center;
    margin: 3rem;
  }
  
  .tech__img *{
    height: 6rem;
    margin-left: 50px;
  }
  
  .tech__img *:nth-child(7n) {
    grid-row: 3;
    grid-column: 1/4;
  }
  
  @media (max-width: 600px) {
    .tech__img {
      gap: 3rem 1.5rem;
      grid-template-columns: repeat(4, 3fr);
    }
  
    .tech__img * {
      height: 4rem;
      margin: 0;
    }
  
    .tech__img *:nth-child(3n) {
      grid-row: 1;
      grid-column: 4/5;
    }
  
    .tech__img *:nth-child(4n) {
      grid-row: 2;
      grid-column: 1/5;
    }
  
    .tech__img *:nth-child(5n) {
      grid-row: 3;
      grid-column: 1/2;
    }
  
    .tech__img *:nth-child(6n) {
      grid-row: 3;
      grid-column: 2/5;
    }
  
    .tech__img *:nth-child(7n) {
      grid-row: 4;
      grid-column: 1/5;
    }
  }

